--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="field input">
                     <label>Password</label>
                     <input type="password" placeholder="Enter new password">
+                    <i class="fas fa-eye"></i>
                 </div>
                 <div class="field image">
                     <label>Select Image</label>
