adding password show toggle

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
             <div class="link">Already signed up? <a href="#">Login now</a></div>
         </section>
     </div>    
+    <script src="js/pass-show-hide.js"></script>
 </body>
 </html>
