--- a/login.html
+++ b/login.html
@@ -30,5 +30,6 @@
             <div class="link">Not yet signed up? <a href="#">Signup now</a></div>
         </section>
     </div>    
+    <script src="js/pass-show-hide.js"></script>
 </body>
 </html>
